# DevOpsLab

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: aaaa9fd4a013_initial_migration.py
app/: config.py  exceptions.py  logger.py  main.py
app/admin/: router.py  schemas.py
app/auth/: models.py  router.py  schemas.py  utils.py
app/dao/: base.py  database.py
app/dependencies/: auth_dep.py  dao_dep.py
app/seeds/: seed.py
tests/: README.md  conftest.py  test_auth.py
