[tool.poetry]
name = "fastapiapp"
version = "0.1.0"
description = ""
authors = ["Oleh"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = ">=0.115.11,<0.116.0"
uvicorn = ">=0.34.0,<0.35.0"
alembic = ">=1.15.1,<2.0.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.39"}
pydantic = {extras = ["email"], version = ">=2.10.6,<3.0.0"}
pydantic-settings = ">=2.8.1,<3.0.0"
bcrypt = ">=3.2.0,<4.0.0"
passlib = {extras = ["bcrypt"], version = ">=1.7.4,<2.0.0"}
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
psycopg2 = "^2.9.10"
python-jose = "^3.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
httpx = "^0.24.1"
aiosqlite = "^0.19.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
